# Caption-Generator-API

./: .gitignore  README.md  pyproject.toml
apps/main/: admin.py  models.py  serializers.py  serivices.py  tests.py  views.py
apps/main/migrations/: 0001_initial.py
config/: settings.py  urls.py
