[tool.poetry]
name = "caption-generator-api"
version = "0.1.0"
description = ""
authors = ["Abduraxmonnn <abduraxmonasatullayev35@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
djangorestframework = "^3.15.2"
pillow = "^11.0.0"
django-filter = "^24.3"
drf-yasg = "^1.21.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
